--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butter-base-streamer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Base class for Butter Streamers",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/butterstreamers/butter-base-streamer/issues"
   },
-  "homepage": "https://github.com/butterstreamers/butter-base-streamer#readme"
+  "homepage": "https://github.com/butterstreamers/butter-base-streamer#readme",
+  "dependencies": {
+    "extend": "^3.0.0",
+    "progress-stream": "^1.2.0",
+    "stream": "0.0.2",
+    "streamify": "^0.2.5"
+  }
 }
